#378: WIP: update frontend for showing first page
